apps/kubeapi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: kubeapi
spec:
  rules:
    - host: kubeapi.chaosdorf.space
      http:
        paths:
        - backend:
            service:
              name: kubernetes.default
              port:
                number: 443
          path: /
          pathType: Prefix
  tls:
    - secretName: kubeapi-ingress-tls
      hosts:
        - kubeapi.chaosdorf.space
